--- a/Evaluation/Readme
+++ b/Evaluation/Readme
@@ -1,4 +1,4 @@
 In addition to objective evaluation, subjective evaluation will be implemented to evaluate our speech synthesizer system. We will target 10 to 15 English native speakers for evaluating English TTS model, and 10 to 15 French speakers to evaluate French model. Regarding the measurement for this evaluation process, we would like to emphasize on 3 criteria: Intelligibility, Naturalness, and Overall View of the system. 
 
-We have also deployed the website to be available on public on this address: 
+We have also deployed the website to be available on public on this address (althogh the server is not working properly): 
 https://multts.herokuapp.com/ 
